# go-ebuild

./: LICENSE  README.html  README.md  base.go  cleanup.go  egosum.go  findGoFiles.go  go-ebuild-cache.sql  go-ebuild-meta.py  go-ebuild.go  go-ebuild.py  go-meta-scan.py  go.mod  main.go  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  writeEbuild.go
.github/: dependabot.yml
.github/workflows/: golangci-lint.yml  lint-action.yaml  pypi_publish.yml  testing.yml
.old/: keepme
cmd/: batch.go  cleanup.go.go  create.go  egosum.go.go  findGoFiles.go  goEbuild.go.go  new-main.go  pkgdev.go  prompt.go  root.go  writeEbuild.go.go
go_ebuild/: __init__.py  __main__.py
tests/: test_main.py  test_version.py
tools/: go-module.eclass-cut-1  go-module.eclass-cw-header  go-module.eclass.go
