[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "go-ebuild"
description = "go-ebuild` is a Python script that generates ebuild skeletons for Golang packages, inspired by the `Cargo Ebuild` project for Rust."
authors = [
  { name = "Mike Lawrence", email = "necrose99@protonmail.com" }
]
license = "MIT"
requires-python = ">=3.8"

[tool.setuptools]
[tool.setuptools.dynamic]
version = {attr = "go_ebuild.__version__"}
readme = {file = ["README.md"]}

[tool.poetry.dependencies]
python = "^3.12"
gitpython = "^3.1.18"
pygithub = "^1.55"
python-gitlab = "^2.10.1"
gopygo = "^0.2.0"
golicense-classifier = "^0.1.0"
snakeoil = "^1.0.0"

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/Necrohol/go-ebuild"
Issues = "https://github.com/Necrohol/go-ebuild/issues"

[project.dependencies]
python = "^3.12"
gitpython = "^3.1.18"
pygithub = "^1.55"
python-gitlab = "^2.10.1"
gopygo = "^0.2.0"
golicense-classifier = "^0.1.0"
snakeoil = "^1.0.0"
